Add real time noti

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,4 @@
+/ = link_to 'Send Notification', root_path, remote: true
+=render partial: 'shared/notification'
 .container
   = render 'videos/index', videos: @videos
