--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html
     <title>Youtubesharing</title>
     = csrf_meta_tags
     = csp_meta_tag
+    = action_cable_meta_tag
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
