--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -21,3 +21,46 @@
 .glyphicon-thumbs-up, .error{
   color: red
 }
+
+.popup-show {
+  display: block !important;
+}
+
+.custom-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.modal-header {
+  font-size: 20px;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+
+.close {
+  font-size: 30px;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  cursor: pointer;
+}
+
+.modal-body {
+  padding: 20px;
+}
