--- a/app/views/shared/_notification.html.erb
+++ b/app/views/shared/_notification.html.erb
@@ -1,5 +1,10 @@
-<div class="alert alert-success alert-dismissible fade in" id="real-notification" data-notification='real-notification'>
-  <button class="close" data-dismiss="alert" aria-label="close">&times;</button>
-  <strong id="title">Alert!</strong>
-  <span id="message">This is new message</span>
+<div class="custom-modal" id="notificationModal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close" id="closeModal">&times;</span>
+      <span>New Video</span>
+    </div>
+    <div class="modal-body">
+    </div>
+  </div>
 </div>
