--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,28 +18,23 @@ html
           = link_to root_path, class: 'navbar-brand' do
             .glyphicon.glyphicon-film aria-hidden="true"
             span Funny Movies
-        .collapse.navbar-collapse#bs-example-navbar-collapse-1
+        .collapse.navbar-collapse#home-navbar
           form.navbar-form.navbar-left
             .form-group
               input.form-control type="text" placeholder="Search"
           ul.nav.navbar-nav.navbar-right
             - if current_user
               li
-                = link_to "Share a movie", new_video_path
-              li.dropdown
-                a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
-                  span= current_user.email
-                  span.caret
-                ul.dropdown-menu
-                  li
-                    a Account
-                  li
-                    = link_to "Sign out", destroy_user_session_path, method: :delete
+                a= "Welcome #{current_user.email}"
+              li
+                = link_to "Share a movie", new_video_path, class:'btn btn-default'
+              li
+                = link_to "Sign out", destroy_user_session_path, method: :delete, class:'btn btn-default'
             - else
               li
-                = link_to "Sign in", user_session_path
+                = link_to "Sign in", user_session_path, class:'btn btn-default'
               li
-                = link_to "Sign up", new_user_registration_path
+                = link_to "Sign up", new_user_registration_path, class:'btn btn-default'
   - flash.each do |type, msg|
     .container
       .container
