Change notification popup content and add show video page

--- a/app/views/shared/_notification.html.erb
+++ b/app/views/shared/_notification.html.erb
@@ -5,6 +5,13 @@
       <span>New Video</span>
     </div>
     <div class="modal-body">
+      <span>A very excited Video with title</span>
+      <strong id='title-video'></strong>
+      <span>have shared by</span>
+      <strong id='email-who-share'></strong>
+    </div>
+    <div class="btn btn-default btn-check-it-out">
+      <a href=''>Check it out</a>
     </div>
   </div>
 </div>
